exports[`(.not).toHaveRequestedRangeNotSatisfiableStatus > using axios > .not.toHaveRequestedRangeNotSatisfiableStatus > fails when response have status code 416 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestedRangeNotSatisfiableStatus()</intensity>

Expected status code to not be 416 received:
  <red>416</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 416,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestedRangeNotSatisfiableStatus > using axios > .toHaveRequestedRangeNotSatisfiableStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestedRangeNotSatisfiableStatus()</intensity>

Expected status code to be 416 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestedRangeNotSatisfiableStatus > using got > .not.toHaveRequestedRangeNotSatisfiableStatus > fails when response have status code 416 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestedRangeNotSatisfiableStatus()</intensity>

Expected status code to not be 416 received:
  <red>416</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 416,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveRequestedRangeNotSatisfiableStatus > using got > .toHaveRequestedRangeNotSatisfiableStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestedRangeNotSatisfiableStatus()</intensity>

Expected status code to be 416 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
